fixed spacing issues on about and contact pages

--- a/common/src/css/style.less
+++ b/common/src/css/style.less
@@ -2,13 +2,22 @@ html, body, #root, #root > div {
     height: 100%
 };
 
-.landing, .about, .contact, .addRest, .addMenuItem {
+.landing, .about, .contact {
         background-image: url('../DD-landing.jpg');
         height: 100%;
         width: 100%;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+};
+
+.addRest, .addMenuItem {
+    background-image: url('../DD-page-header.jpg');
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 };
 
 
